# podcast_packager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  conanfile.txt  feeds.txt
src/: directory_status.cpp  directory_status.h  episode.h  feed.h  feed_download_service.cpp  feed_download_service.h  feed_list_service.cpp  feed_list_service.h  feed_parser.c  feed_parser.cpp  feed_parser.h  file_download_service.cpp  file_download_service.h  global_config_service.cpp  global_config_service.h  indicator.cpp  indicator.h  main.cpp  mass_storage_manager.cpp  mass_storage_manager.h  new_episode_service.cpp  new_episode_service.h  previous_episode_service.cpp  previous_episode_service.h  transfer.cpp  transfer_state_machine.cpp  transfer_state_machine.h  updater.cpp  updater.h  usb_mass_storage_manager.cpp  usb_mass_storage_manager.h
test/: constants.h  directory_status_test.cpp  feed_download_service_test.cpp  feed_list_service_test.cpp  feed_parser_test.cpp  file_download_service_test.cpp  global_config_service_test.cpp  main.cpp  new_episode_service_test.cpp  previous_episode_service_test.cpp  test_server.rb  transfer_state_machine_test.cpp
test/fixtures/: sample_config.txt  sample_feeds.txt  sample_previous_episodes.txt
xml/: film_reroll.xml
